css/cours.css
.cours-section {
    padding: 0 20px;
    background-color: #F8FAFF;
}
.cours-section-header {
    font-family: var(--playfair-display);
    font-size: clamp(2rem, 1.296rem + 3.005vw, 3rem);
    font-weight: 700;
    color: #222222;
    margin-bottom: 15px;
}
.cours-container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    padding: 70px 0;
}
.cours-item {
    position: relative;
    background-color: #FFFFFF;
    height: 300px;
    min-width: 200px;
    flex: 1 1 100%;
    max-width: 300px;
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius: 40px;
    box-shadow: 
    0 -10px 0 0 #FFC662,   
    0 10px 0 0 #EAEAEA; 
    margin-bottom: 70px;
    margin-right: 20px;
}
.cours-item img {
    position: absolute;
    top: -50px;
    max-width: 100px;
}
.cours-item h2 {
    text-align: center;
    position: absolute;
    top: 90px;
    font-family: var(--nunito-sans);
    color: #444444;
    font-size: 1.5rem;
    font-weight: 700;
}
.cours-item a {
    position: absolute;
    top: 190px;
    font-size: 1rem;
    font-weight: 700;
    padding: 10px 50px;
    border: solid 3px #444444;
    border-radius: 50px;
    box-shadow: 0 6px 0 0 #444444;
}

@media (min-width: 450px) {
    .cours-item {
        flex: 1 1 35%; /* Two items per row with some gap */
    }
}

/* Media query for larger screens - display 3 items per row */
@media (min-width: 800px) {
    .cours-item {
        flex: 1 1 30%; /* Three items per row */
    }
}

/* Media query for extra-large screens - display 4 items per row */
@media (min-width: 1100px) {
    .cours-item {
        flex: 1 1 22%; /* Four items per row */
    }
}

